# GUI_Plotter

./: .gitignore  README.md  main.py  pyproject.toml
core/: constants.py  data_loader.py  plot_worker.py
src/badger_plot/: __init__.py  __main__.py  badger_loop_py3_3.py
src/badger_plot/core/: analysis_3d.py  data_loader.py  file_editor.py  plot_worker.py  theme.py
src/badger_plot/ui/: custom_widgets.py  main_window.py  splash_screen.py
src/badger_plot/ui/dialogs/: analysis.py  analysis_3d.py  analysis_hist.py  data_mgmt.py  fitting.py  fitting_3d.py  help.py  settings.py
src/badger_plot/ui/renderers/: heatmap_renderer.py  renderer_2d.py  renderer_3d.py  renderer_histogram.py
src/badger_plot/utils/: function_io.py
ui/: main_window.py
ui/dialogs/: analysis.py  data_mgmt.py  fitting.py  help.py
utils/: function_io.py
