[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "badger_plot"
version = "1.0.0"
authors = [{name="Claudethelobster"}]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "PyQt6",
    "pyqtgraph",
    "PyOpenGL",
    "PyOpenGL_accelerate",
    "matplotlib",
    "h5py"
]

[project.scripts]
badger_plot = "badger_plot.__main__:main"

[project.urls]
Homepage = "https://github.com/Claudethelobster/GUI_Plotter"

[tool.setuptools]
packages = ["badger_plot"]
include-package-data = true
